k8s/prod/namespace-gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateways-prod
  labels:
    domain: infrastructure
    environment: prod

    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
