k8s/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: users-route
  namespace: gopherify
spec:
  parentRefs:
    - name: gopherify-gateway
  hostnames:
    - "api.users.gopherify.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: users-service
          port: 80
